fixed flip-card-back text overflow

--- a/style.css
+++ b/style.css
@@ -741,7 +741,16 @@ button#scrolltopBtn {
   color:#000;
   transform: rotateY(180deg);
   padding: 20px;
+
+  scrollbar-width: none;  
+  overflow-y: scroll;
+
 }
+
+.flip-card-back::-webkit-scrollbar{
+        display: none;
+}
+
 img
 {
   position: relative;
